[gd_scene load_steps=59 format=3 uid="uid://c7d7u7y52kw66"]

[ext_resource type="Texture2D" uid="uid://bh6ikhi44n0lu" path="res://Assets/Enemies/Skeleton/Idle.png" id="1_0qj1f"]
[ext_resource type="Texture2D" uid="uid://68xkc102v36j" path="res://Assets/Enemies/Skeleton/Attack.png" id="1_6layy"]
[ext_resource type="Script" uid="uid://h66as1ewfei5" path="res://Scripts/EnemyScripts/Skelly/skellyController.gd" id="1_vuksy"]
[ext_resource type="Texture2D" uid="uid://10mplf34dg7q" path="res://Assets/Enemies/Skeleton/Death.png" id="2_y7efa"]
[ext_resource type="Texture2D" uid="uid://dnty37mup3egi" path="res://Assets/Enemies/Skeleton/Shield.png" id="4_bq7fo"]
[ext_resource type="Texture2D" uid="uid://dvprfin42i07s" path="res://Assets/Enemies/Skeleton/Take Hit.png" id="5_76l70"]
[ext_resource type="Texture2D" uid="uid://c1n3huxmrb22q" path="res://Assets/Enemies/Skeleton/Walk.png" id="6_y8kn1"]
[ext_resource type="Script" uid="uid://cd2ntc05ylnkn" path="res://Scripts/JackScripts/FSM.gd" id="9_chfjh"]
[ext_resource type="Script" uid="uid://btl20vimonkn4" path="res://Scripts/EnemyScripts/Skelly/E_idle.gd" id="10_e87ue"]
[ext_resource type="Script" uid="uid://bj42fnts68457" path="res://Scripts/EnemyScripts/Skelly/E_walk.gd" id="11_cv5gx"]
[ext_resource type="Script" uid="uid://cpfskbmbvudv4" path="res://Scripts/EnemyScripts/Skelly/E_combat.gd" id="12_htm1h"]
[ext_resource type="Script" uid="uid://6vvf51h0rawf" path="res://Scripts/EnemyScripts/Skelly/E_attack.gd" id="13_0tbki"]
[ext_resource type="Shader" uid="uid://dlgpseqakkaha" path="res://ShaderNResources/PaletteSwap.gdshader" id="14_3rbnq"]
[ext_resource type="Script" uid="uid://b5ta0e16pyydd" path="res://Scripts/EnemyScripts/Skelly/E_hurt.gd" id="15_3rbnq"]
[ext_resource type="Texture2D" uid="uid://dhecus1qgdu57" path="res://Assets/Enemies/Skeleton/Idle_palette.png" id="15_qjnjd"]
[ext_resource type="Script" uid="uid://bjl8k72ig8ejr" path="res://Scripts/EnemyScripts/Skelly/E_dead.gd" id="16_qjnjd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0tbki"]
shader = ExtResource("14_3rbnq")
shader_parameter/palette = ExtResource("15_qjnjd")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8fdkr"]
atlas = ExtResource("1_6layy")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_56u18"]
atlas = ExtResource("1_6layy")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmhwg"]
atlas = ExtResource("1_6layy")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt8fd"]
atlas = ExtResource("1_6layy")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw24e"]
atlas = ExtResource("1_6layy")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8u1l"]
atlas = ExtResource("1_6layy")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_unlwy"]
atlas = ExtResource("1_6layy")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_efbit"]
atlas = ExtResource("1_6layy")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m4fd"]
atlas = ExtResource("2_y7efa")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmrpa"]
atlas = ExtResource("2_y7efa")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrfma"]
atlas = ExtResource("2_y7efa")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwq4f"]
atlas = ExtResource("2_y7efa")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7war"]
atlas = ExtResource("1_0qj1f")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wu1q"]
atlas = ExtResource("1_0qj1f")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8mmf"]
atlas = ExtResource("1_0qj1f")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mn1wn"]
atlas = ExtResource("1_0qj1f")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4ne0"]
atlas = ExtResource("4_bq7fo")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xyc3"]
atlas = ExtResource("4_bq7fo")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mbad"]
atlas = ExtResource("4_bq7fo")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm1sx"]
atlas = ExtResource("4_bq7fo")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx7vx"]
atlas = ExtResource("5_76l70")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucc07"]
atlas = ExtResource("5_76l70")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw685"]
atlas = ExtResource("5_76l70")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e51kb"]
atlas = ExtResource("5_76l70")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3rp6"]
atlas = ExtResource("6_y8kn1")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wymdi"]
atlas = ExtResource("6_y8kn1")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ditex"]
atlas = ExtResource("6_y8kn1")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jscql"]
atlas = ExtResource("6_y8kn1")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_0k6yh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fdkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56u18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmhwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt8fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw24e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8u1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unlwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efbit")
}],
"loop": true,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m4fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmrpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrfma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwq4f")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7war")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wu1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8mmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mn1wn")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4ne0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xyc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mbad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm1sx")
}],
"loop": false,
"name": &"Shield",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx7vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucc07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw685")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e51kb")
}],
"loop": false,
"name": &"Take_Hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3rp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wymdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ditex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jscql")
}],
"loop": false,
"name": &"Walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_odjfc"]
radius = 6.0
height = 54.0

[sub_resource type="Animation" id="Animation_d8exw"]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkellySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SkellySprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}

[sub_resource type="Animation" id="Animation_ux4xn"]
resource_name = "Death"
length = 0.31
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkellySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SkellySprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}

[sub_resource type="Animation" id="Animation_pgy1r"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkellySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SkellySprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}

[sub_resource type="Animation" id="Animation_dygl2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkellySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SkellySprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}

[sub_resource type="Animation" id="Animation_thmxk"]
resource_name = "Shield"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkellySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SkellySprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Shield"]
}

[sub_resource type="Animation" id="Animation_84w4i"]
resource_name = "Walk"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkellySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.333333, 0.6, 0.833333, 1, 1.2, 1.43333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SkellySprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}

[sub_resource type="Animation" id="Animation_3rbnq"]
resource_name = "TakeHit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkellySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.233333, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SkellySprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Take_Hit"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qw3p4"]
_data = {
&"Attack": SubResource("Animation_d8exw"),
&"Death": SubResource("Animation_ux4xn"),
&"Idle": SubResource("Animation_pgy1r"),
&"RESET": SubResource("Animation_dygl2"),
&"Shield": SubResource("Animation_thmxk"),
&"TakeHit": SubResource("Animation_3rbnq"),
&"Walk": SubResource("Animation_84w4i")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lntep"]
size = Vector2(119, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dafwi"]
size = Vector2(70, 59)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lbk5d"]

[node name="Skelly" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_vuksy")
health = 100.0

[node name="Label" type="Label" parent="."]
offset_left = -10.0
offset_top = -49.0
offset_right = 30.0
offset_bottom = -26.0

[node name="SkellySprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_0tbki")
sprite_frames = SubResource("SpriteFrames_0k6yh")
animation = &"Attack"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_odjfc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qw3p4")
}

[node name="Timer" type="Timer" parent="."]

[node name="FSM" type="Node" parent="."]
script = ExtResource("9_chfjh")

[node name="Idle" type="Node" parent="FSM"]
script = ExtResource("10_e87ue")

[node name="Patrol" type="Node" parent="FSM"]
script = ExtResource("11_cv5gx")

[node name="Combat" type="Node" parent="FSM"]
script = ExtResource("12_htm1h")

[node name="Attack" type="Node" parent="FSM"]
script = ExtResource("13_0tbki")

[node name="Hurt" type="Node" parent="FSM"]
script = ExtResource("15_3rbnq")
metadata/_custom_type_script = "uid://boxbtoh25c3mr"

[node name="HitTimer" type="Timer" parent="FSM/Hurt"]
wait_time = 0.5
one_shot = true

[node name="Dead" type="Node" parent="FSM"]
script = ExtResource("16_qjnjd")
metadata/_custom_type_script = "uid://boxbtoh25c3mr"

[node name="prop" type="Node2D" parent="."]
visible = false

[node name="DetectionArea" type="Area2D" parent="prop"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="prop/DetectionArea"]
position = Vector2(37.5, -3)
shape = SubResource("RectangleShape2D_lntep")
debug_color = Color(0.519873, 0.541882, 0.53246, 0.42)

[node name="hitbox" type="Area2D" parent="prop"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="prop/hitbox"]
position = Vector2(40, -2.5)
shape = SubResource("RectangleShape2D_dafwi")
debug_color = Color(0.519873, 0.541882, 0.53246, 0.42)

[node name="RCChkPlayer" type="RayCast2D" parent="prop"]
position = Vector2(0, 20)
target_position = Vector2(35, 0)
collision_mask = 3

[node name="RCChkGround" type="RayCast2D" parent="prop"]
position = Vector2(25, 2)
target_position = Vector2(0, 75)

[node name="RCChkBack" type="RayCast2D" parent="prop"]
target_position = Vector2(-33, 0)

[node name="PlayerTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_lbk5d")
texture = ExtResource("1_0qj1f")

[connection signal="body_entered" from="prop/DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="prop/DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="PlayerTimer" to="." method="_on_player_timer_timeout"]
